...
                                    keyExtractor={item => item.id}
                                    testID='newone'
                                    renderItem={({ item }) => {
                                        return (
                                            <View>
                                                <View>
                                                    <TouchableOpacity onPress={() => navigation.navigate(item.name)} testID='productsTest'>
                                                        <View>
                                                            <Text style={theme.homeStyles.nameText} >{item.name}</Text>
                                                        </View>
                                                        <View style={theme.homeStyles.imageContain}>
                                                            <Image
                                                                source={{ uri: item.req }}
...
